-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0, Lustre 2.16.0, Lustre 2.15.0
-
None
-
3
-
9223372036854775807
The mdt.*.md_stats file does not account for open calls in the same way as close calls, because opens are often done via ldlm_enqueue RPCs. However, this is confusing for users and it would be better to account all file open operations in md_stats for monitoring tools to report.
mdt.lfs02-MDT0000.md_stats= snapshot_time 1706046984.267705661 secs.nsecs open 800454448 samples [usecs] 6 449605426 84473621404 8828059919466953498 close 1463091136 samples [usecs] 2 3451458 33679892461 484885521899461 mknod 44930495 samples [usecs] 26 400110043 31964289397 4829363540133770743 link 3637 samples [usecs] 25 117405 676212 18554500846 unlink 169387231 samples [usecs] 19 7600061 16143785339 657915431102617 mkdir 3355291 samples [usecs] 41 3370485 592315719 87982958065425 rmdir 22503874 samples [usecs] 24 5003122 2559393340 28958040491674 rename 2725670 samples [usecs] 27 35742943 2096108004 1518201419856972 getattr 3859973046 samples [usecs] 0 504898 20718622784 4051941183322 setattr 419973866 samples [usecs] 8 38748184 26473058938 14765172506147676 getxattr 182191316 samples [usecs] 1 753387 2613080699 41258084724157 setxattr 682662 samples [usecs] 7 24636726 245823945 609339268500553 statfs 17829630 samples [usecs] 0 5804 338049172 18901482684 sync 5445106 samples [usecs] 1 602262 1085691136 24188261051492 samedir_rename 2546549 samples [usecs] 27 35742943 2007914082 1508290164930046 parallel_rename_dir 2544215 samples [usecs] 27 35742943 2000374913 1502648298189417 parallel_rename_file 2334 samples [usecs] 47 1869510 7539169 5641866740629 crossdir_rename 179121 samples [usecs] 67 3099019 88193922 9911254926926